--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ charset-normalizer==2.1.0
 click==8.1.3
 cryptography==37.0.4
 cycler==0.11.0
+Cython>=0.29.36,<0.30.0
 dash==2.17.1
 dash-bootstrap-components==2.0.1
 dash-core-components==2.0.0
@@ -41,7 +42,7 @@ flasgger==0.9.5
 Flask==2.3.3
 fonttools==4.37.1
 frozenlist==1.3.0
-gevent==21.12.0
+gevent==25.4.1
 greenlet==1.1.2
 gunicorn==22.0.0
 h11==0.13.0
