--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,7 @@ plotly==5.22.0
 gunicorn==22.0.0
 gevent==25.4.1
 aiohttp>=3.9.0
-dash==2.17.1
-dash-bootstrap-components==2.0.1
+dash>=3.0.0
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
